--- a/src/sass/layout/_quiz.scss
+++ b/src/sass/layout/_quiz.scss
@@ -37,9 +37,6 @@
   margin: 5px;
   border: $orange 2px solid;
 }
-.form-group {
-  padding: 2rem 4rem;
-}
 
 .minmaxrange {
   display: flex;
@@ -152,26 +149,29 @@ input.switch {
   height: 1.4rem;
   cursor: pointer;
 }
-
-.form-group {
-  display: flex;
-  flex-direction: column;
-  .h2 {
-    font-family: "Uniform-Pro-Blk";
-    text-transform: uppercase;
-    font-size: 25px;
+.quizstyle {
+  .form-group {
+    padding: 2rem 4rem;
+    display: flex;
+    flex-direction: column;
+    .h2 {
+      font-family: "Uniform-Pro-Blk";
+      text-transform: uppercase;
+      font-size: 25px;
+    }
+    input[type="text"] {
+      margin: 3rem auto;
+      width: 60%;
+      border-radius: 2rem;
+      border: 2px solid $orange;
+      background-color: $dark;
+      padding: 0.3rem 0.7rem;
+      color: white;
+      font-size: 1.1rem;
+    }
   }
 }
-.form-group > input[type="text"] {
-  margin: 3rem auto;
-  width: 60%;
-  border-radius: 2rem;
-  border: 2px solid $orange;
-  background-color: $dark;
-  padding: 0.3rem 0.7rem;
-  color: white;
-  font-size: 1.1rem;
-}
+
 .selected-games {
   display: flex;
   flex-direction: row;
