--- a/src/sass/layout/_background.scss
+++ b/src/sass/layout/_background.scss
@@ -24,7 +24,7 @@ header {
 }
 .bck-text {
   margin: -0.6rem 0 0 0;
-  padding: 0;
+  padding: 0px;
   font-family: "Uniform-Pro-Blk";
   font-size: 8vw;
   overflow: hidden;
